--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <logback.version>1.2.3</logback.version>
         <zookeeper.version>3.7.0</zookeeper.version>
         <curator-recipes.version>4.0.1</curator-recipes.version>
-        <flink.version>1.13.2</flink.version>
+        <flink.version>1.13.5</flink.version>
         <kafka-client.version>2.1.1</kafka-client.version>
         <lombok.version>1.18.6</lombok.version>
         <common-lang3.version>3.6</common-lang3.version>
@@ -65,6 +65,7 @@
         <javacc.version>7.0.10</javacc.version>
         <junit.version>4.13.2</junit.version>
         <hive.version>3.1.2</hive.version>
+        <mysql.version>8.0.17</mysql.version>
     </properties>
 
     <dependencyManagement>
@@ -726,6 +727,12 @@
 
             <dependency>
                 <groupId>org.apache.flink</groupId>
+                <artifactId>flink-streaming-scala_2.11</artifactId>
+                <version>${flink.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.flink</groupId>
                 <artifactId>flink-json</artifactId>
                 <version>${flink.version}</version>
             </dependency>
@@ -759,6 +766,7 @@
                 <artifactId>slf4j-log4j12</artifactId>
                 <version>${slf4j-log4j12.version}</version>
             </dependency>
+
 
             <dependency>
 
